アドコード設定

--- a/index.html
+++ b/index.html
@@ -241,6 +241,14 @@ $(function() {
 })(window, jQuery);
     
 </script>
-
+<script language="javascript">
+    var arg = new Object;
+    var pair=location.search.substring(1).split('&');
+    for(i=0;pair[i];i++) {
+        var kv = pair[i].split('=');
+        arg[kv[0]] = kv[1];
+    }
+    document.write("<img src='/shop/set_adcode?ad_code="+arg["ad_code"]+"' width='1' height='1' >");
+</script>
 </body>
 </html>
