--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <a href="#cvform"><img src="img/top/cvbtn01_pc.png" alt=""></a>
                 </div>
                 <div class="cvbtn02">
-                    <a href="http://lp-sutto-slimming.jp/shop/add_to_cart/?item_qty_4[qty]=1&item_id_4=order&return_url=http://lp-sutto-slimming.jp"><img src="img/top/cvbtn02_pc.png" alt=""></a>
+                    <a href="http://lp-sutto-slimming.jp/shop/add_to_cart/?item_qty_6[qty]=1&item_id_6=order&return_url=http://lp-sutto-slimming.jp"><img src="img/top/cvbtn02_sp.png" alt=""></a>
                 </div>
             </div>
             <img src="img/top/img05_pc.png" alt="">
@@ -115,7 +115,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <a href="#cvform"><img src="img/top/cvbtn01_pc.png" alt=""></a>
                 </div>
                 <div class="cvbtn02">
-                    <a href="http://lp-sutto-slimming.jp/shop/add_to_cart/?item_qty_4[qty]=1&item_id_4=order&return_url=http://lp-sutto-slimming.jp"><img src="img/top/cvbtn02_pc.png" alt=""></a>
+                    <a href="http://lp-sutto-slimming.jp/shop/add_to_cart/?item_qty_6[qty]=1&item_id_6=order&return_url=http://lp-sutto-slimming.jp"><img src="img/top/cvbtn02_sp.png" alt=""></a>
                 </div>
             </div>
             <img src="img/top/img10_pc.png" alt="">
