インラインフレーム適用

--- a/information.html
+++ b/information.html
@@ -147,10 +147,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         ※ お支払回数は一括払いのみとなります。<br>
                         ※ 弊社ではSSLという暗号化システムを利用しております、お客様のカード番号は暗号化されて送信されます。<br>
                         ※ 尚、得ラクコースの2回目以降のお届けの場合、次回発送予定日から7日前を過ぎて、お届け日ご変更のお申し出がなかった場合は、商品発送の確定として扱いクレジットカード会社へ仮決済を依頼致しますのでご了承ください。<br>
-                        ※ 定期コース継続中に何らからの理由で（一般的に多いのが有効期限切れや上限額オーバー）クレジット決済が不可だった場合、その旨弊社よりご連絡させて頂きます。5日以内に確認が取れなかった際は、一旦お支払い方法を『代金引換』に変更してお送りさせていただきます（手数料弊社負担）。製品の特性上、ご継続頂く事で効果をご実感いただきやすい商材の為、商品のお届けを優先させて頂いておりますので何卒ご理解の程よろしくお願いします。
-                        
+                        ※ 定期コース継続中に何らからの理由で（一般的に多いのが有効期限切れや上限額オーバー）クレジット決済が不可だった場合、その旨弊社よりご連絡させて頂きます。5日以内に確認が取れなかった際は、一旦お支払い方法を『代金引換』に変更してお送りさせていただきます（手数料弊社負担）。製品の特性上、ご継続頂く事で効果をご実感いただきやすい商材の為、商品のお届けを優先させて頂いておりますので何卒ご理解の程よろしくお願いします。<br>
+                        <br>
                         【NP後払い】(コンビニ支払い、銀行振込、郵便振替) <br>
-                        NP後払い<br>
                         ○このお支払方法の詳細 <br>
                         請求書は商品に同梱されず、ご登録住所(メイン)へ郵送いたします。 <br>
                         商品代金のお支払いは「コンビニ」「郵便局」「銀行」どこでも可能です。 <br>
