--- a/index.html
+++ b/index.html
@@ -93,37 +93,37 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div id="wrapper" class="wrapper">
 	<div id="article">
 		<div class="contents">
-            <img src="img/top/img01_pc.png" alt="">
-            <img src="img/top/img02_pc.png" alt="">
-            <img src="img/top/img03_pc.png" alt="" id="hiwa">
-            <img src="img/top/img04_pc.png" alt="">
+            <h1><img src="img/top/img01_pc.png" alt="Sutto!ボディマッサージジェル 憧れのボディシルエットへ 研究所との共同開発,特許取得成分配合,安心・安全のMADE IN JAPAN"></h1>
+            <img src="img/top/img02_pc.png" alt="ダイエットの概念を根本からくつがえす、新時代がきました！！『Sutto！』は、体を引きしめる成分であるバミューダ諸島で採取した自然界由来の「バチルス/ダイズ発酵エキス」をはじめ、セルライト対策に特化した特許取得成分「ブチルカルバミン酸トリメチルシクロヘキシル」など、細胞レベルから体に働きかけるという「ダイエット」の概念をくつがえす革命を起こします！！">
+            <img src="img/top/img03_pc.png" alt="ボディマッサージジェルSutto!の誕生秘話 運命的な出会いがあったのは、2014年タイで行われた「In-Cosmetics Asia 2014」。そこで金賞を獲得したのが注目していた「バチルス/ダイズ発酵エキス」でした。そこからはOEM化粧品の分野で30年の歴史を持つ、国内でも指折りの化粧品メーカーであるベル・クール研究所と共同研究開発し、ボディマッサージジェルの常識をくつがえす新製品「Sutto!」が誕生しました。" id="hiwa">
+            <img src="img/top/img04_pc.png" alt="スッとした美しいボディシルエットを手軽に手に入れたい！こんな悩みの方はお試しください！お腹やお尻を少しでも理想的なシルエットに近づけたい！二の腕や腰回りのように、痩せづらい部位も引き締めていきたい！痩せることももちろんだけれど、筋力も効果的にアップさせたい！運動する時間があまりないので、普段の仕事や家事の運動量を生かして痩せたい！理論と成分に安心できるものだけを取り入れたい！もっとキレイになって、今度こそ男性を振り向かせたい！">
             <div class="cvarea">
                 <div class="cvbtn01">
-                    <a href="#cvform"><img src="img/top/cvbtn01_pc.png" alt=""></a>
+                    <a href="#cvform"><img src="img/top/cvbtn01_pc.png" alt="得ラクコースが人気！！定期コース1,980円　初回限定価格で購入"></a>
                 </div>
                 <div class="cvbtn02">
-                    <a href="http://lp-sutto-slimming.jp/shop/add_to_cart/?item_qty_6[qty]=1&item_id_6=order&return_url=http://lp-sutto-slimming.jp"><img src="img/top/cvbtn02_sp.png" alt=""></a>
+                    <a href="http://lp-sutto-slimming.jp/shop/add_to_cart/?item_qty_6[qty]=1&item_id_6=order&return_url=http://lp-sutto-slimming.jp"><img src="img/top/cvbtn02_sp.png" alt="1回限りの通常購入の方はコチラ　6,480円"></a>
                 </div>
             </div>
-            <img src="img/top/img05_pc.png" alt="">
-            <img src="img/top/img06_pc.png" alt="">
-            <img src="img/top/img07_pc.png" alt="">
-            <img src="img/top/img08_pc.png" alt="">
-            <img src="img/top/img09_pc.png" alt="">
+            <img src="img/top/img05_pc.png" alt="東京大学や大阪大学も注目する「やせホルモン」 憧れのメリハリ美ボディをつくるボディマッサージジェルSutto!はここが違う！！『Sutto!』の最大の特徴は、アディポネクチンの作用から、筋繊維のミトコンドリアを活性化させるということ。脂肪細胞から分泌されるアディポネクチンは「やせホルモン」としてテレビや新聞でも広く取り上げられ、東京大学や大阪大学も研究チームを結成するなど、今注目のホルモンです。自然界由来の「バチルス/ダイズ発酵エキス」によってアディポネクチンの分泌を促し、ミトコンドリアを活性化させることで、持久運動トレーニングと似た作用を発揮します。">
+            <img src="img/top/img06_pc.png" alt="細胞レベルで筋肉を活性化 塗ってマッサージするだけで持久トレーニングと似た作用を発揮するのです！10秒マッサージによるサーモグラフィ実験 Sutto!で体の芯からほっこりめぐり力。しっかりと効率よく代謝を促してくれます。">
+            <img src="img/top/img07_pc.png" alt="Sutto!が選ばれる3つのこだわり こだわり1　日本有数の研究所と共同開発 徹底的にこだわった処方と厳格な品質管理 ベル・クール研究所とSutto!はあらゆる角度から、トラブルの原因を未然に防ぐために、厳格な品質管理を実施しています。さらに、原材料の個性を引き出し、製品の品質と安全性を高めるために、手づくりによる処方開発を行っており技術者が五感を働かせながら最適な温度や攪拌を見つけ出し、より質の高い製品へと仕上げています。この携わる人々の製品に対する意識の高さこそ、美と品質を徹底的に追求したボディマッサージジェルが出来上がるのです。">
+            <img src="img/top/img08_pc.png" alt="こだわり2　日常的に使ってもらいたいからこそ選び抜いた！！7種類の１００％天然由来ハーブエキス＋オーガニックサンフラワーオイル配合 Sutto!は約200種類もの膨大な種類の植物エキスの中から最も刺激緩和に有効だった7種類の植物エキスを適切な配合でバランス良く組み合わせる事により抗炎症作用、界面活性剤の刺激緩和など肌に優しく安心して使っていただける内容処方に仕上げています。7種類のハーブエキス配合 ツボクサエキス イタドリ根エキス オウゴンエキス チャ葉エキス カンゾウ根エキス カミツレ花エキス ローズマリー葉エキス">
+            <img src="img/top/img09_pc.png" alt="こだわり3　お肌に優しい6つのフリーだから気持ち良く毎日使い続けられる 合成着色料フリー 合成香料フリー 動物性由来フリー 鉱物油フリー　防腐剤フリー エタノールフリー 体と心の快適さを追求した、日本の研究所でつくられるメイドインジャパン品質をお届けします。">
             <div class="cvarea">
                 <div class="cvbtn01">
-                    <a href="#cvform"><img src="img/top/cvbtn01_pc.png" alt=""></a>
+                    <a href="#cvform"><img src="img/top/cvbtn01_pc.png" alt="得ラクコースが人気！！定期コース1,980円　初回限定価格で購入"></a>
                 </div>
                 <div class="cvbtn02">
-                    <a href="http://lp-sutto-slimming.jp/shop/add_to_cart/?item_qty_6[qty]=1&item_id_6=order&return_url=http://lp-sutto-slimming.jp"><img src="img/top/cvbtn02_sp.png" alt=""></a>
+                    <a href="http://lp-sutto-slimming.jp/shop/add_to_cart/?item_qty_6[qty]=1&item_id_6=order&return_url=http://lp-sutto-slimming.jp"><img src="img/top/cvbtn02_sp.png" alt="1回限りの通常購入の方はコチラ　6,480円"></a>
                 </div>
             </div>
-            <img src="img/top/img10_pc.png" alt="">
-            <img src="img/top/img11_pc.png" alt="">
-            <img src="img/top/img12_pc.png" alt="">
-            <img src="img/top/img13_pc.png" alt="">
-            <img src="img/top/img14_pc.png" alt="">
-            <img src="img/top/img15_pc.png" alt="">
+            <img src="img/top/img10_pc.png" alt="たった5分で無理せず続ける！手軽にキュッと美ボディ 効果を最大限にするおすすめマッサージ方法">
+            <img src="img/top/img11_pc.png" alt="95%の方が「Sutto!」でマイナスを実感しました！「Sutto!」の効果を実感した方の声「body create room Laugh 代表」ヨガインストラクター リンパマッサージセラピスト 平田裕美さん　30代">
+            <img src="img/top/img12_pc.png" alt="産後太りがなかなか解消できない！でも、運動する時間のない忙しいママにとてもオススメです！出産から2年。お腹のたるんだ肉が無くならなくて、「もうこのままおばさん体系になるのかなー？」と半分諦めていました。塗るだけで理想的なシルエットになるなんて、都合の良い話はないだろうと、半信半疑のまま使い始めて2週間経った頃、体重は全く変わっていないのに、お腹や太もも、二の腕が引きしまって本当にビックリ！！夫も驚いていました！！使って2ヶ月。きつめだった白衣もゆとりができて、出産前の体型にもどりつつあります。少ない量ですごくのびて、保湿力も高いので、毎日お風呂あがりに塗っています。これなら子育てと仕事で忙しくても続けていけます。そして、今では〝Sutto!″はもう手放せません。">
+            <img src="img/top/img13_pc.png" alt="変化していく自分がわかるのが楽しみ！ディマッサージジェルを塗った後は、とても体が温かくなり、代謝が良くなっていることを体感できました！マッサージ後にヨガをすることもあるのですが、塗らない時と塗った時では汗のかき方が違い、リンパの流れが良くなっているのかなと感じました。1ヶ月後くらいに急に体が引き締まってきて、今では毎日使うのが楽しみになっています。">
+            <img src="img/top/img14_pc.png" alt="ケアが簡単楽チンなので、続けられます！毎日、朝・夜に塗って簡単なマッサージをしただけなのに、こんなにもサイズダウンをすることができて、すごく嬉しいです！おかげさまで、ズボンもワンサイズ下がりました。さらには、ボディマッサージジェルを塗った後は、とてもしっとりしていてお肌の潤いを感じました。とにかくケアが楽だったので、毎日続けることができて本当に感謝の気持ちでいっぱいです！">
+            <img src="img/top/img15_pc.png" alt="驚きの変化を体感ください！お申し込みフォーム">
             <div class="iframe" id="cvform">
                 <div class="iframe-inner">
                     <script type="text/javascript">
@@ -135,7 +135,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		</div>
 	</div>
 	<footer id="footer">
-		<a href="tel:0118128171" class="footer-tel"><img src="img/top/footer_pc.png" alt=""></a>
+		<a href="tel:0118128171" class="footer-tel"><img src="img/top/footer_pc.png" alt="ご注文お問合わせ Sutto!お客様相談　011-812-8171 【営業時間】 9:00〜18:00（土日祝・年末年始除く）"></a>
         <ul>
             <li><a href="./">TOPページ</a></li>
             <li><a href="information.html">会社概要</a></li>
